2007-10-04  Satoshi Nakagawa <artension@gmail.com>

	Changed to use sort_by.

2007-10-03  Satoshi Nakagawa <artension@gmail.com>

	Added a build target to bundling RubyCocoa.framework.
	A patch from Eloy Duran.

2007-09-30  Satoshi Nakagawa <artension@gmail.com>

	Replaced #length to #size for NSString, NSArray and NSDictionary.

2007-09-30  Satoshi Nakagawa <artension@gmail.com>

	Assigned ctrl+enter to send Notice message.
	Added a menu item to show paste dialog.

2007-09-30  Satoshi Nakagawa <artension@gmail.com>

	Changed to hide channel passwords in title bar of the main window.

2007-09-27  Satoshi Nakagawa <artension@gmail.com>

	Changed the default settings for tab key to nick completion on non-Japanese environment.

2007-09-24  Satoshi Nakagawa <artension@gmail.com>

	Released 0.10.
	Added scripts to automate release build.

2007-09-24  Satoshi Nakagawa <artension@gmail.com>

	Changed sort order of the nick list to myself, op, non-op.

2007-09-22  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, unread and keyword state were not working.

2007-09-22  Satoshi Nakagawa <artension@gmail.com>

	Changed to push text in the input buffer on moving channels.

2007-09-17  Satoshi Nakagawa <artension@gmail.com>

	Limited length of channel topic for window title.

2007-09-17  Satoshi Nakagawa <artension@gmail.com>

	Applied CocoaSheet to all sheet dialogs.

2007-09-17  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, buttons of CocoaSheet should not be class variable, but class instance variable.

2007-09-17  Satoshi Nakagawa <artension@gmail.com>

	Improved channel dialog and reorder server tree dialog.

2007-09-17  Satoshi Nakagawa <artension@gmail.com>

	Added CocoaSheet to clean up code around sheets.
	Contributed by Josh Goebel.

2007-09-17  Satoshi Nakagawa <artension@gmail.com>

	Improved channel dialog.

2007-09-17  Satoshi Nakagawa <artension@gmail.com>

	Improved server dialog.

2007-09-16  Satoshi Nakagawa <artension@gmail.com>
