@@ -2,7 +2,13 @@
     IBClasses = (
         {CLASS = FirstResponder; LANGUAGE = ObjC; SUPERCLASS = NSObject; }, 
         {
-            ACTIONS = {onCancel = id; onDccAddressDetectionMethodChanged = id; onOk = id; }; 
+            ACTIONS = {
+                onCancel = id; 
+                onDccAddressDetectionMethodChanged = id; 
+                onLogTranscriptChanged = id; 
+                onOk = id; 
+                onTranscriptFolderChanged = id; 
+            }; 
             CLASS = PreferenceDialog; 
             LANGUAGE = ObjC; 
             OUTLETS = {
@@ -16,11 +22,13 @@
                 "gen_disconnect_on_doubleclick" = id; 
                 "gen_join_on_doubleclick" = id; 
                 "gen_leave_on_doubleclick" = id; 
+                "gen_log_transcript" = id; 
                 "gen_tab_action" = id; 
                 "gen_use_growl" = id; 
                 "key_dislike_words" = id; 
                 "key_words" = id; 
                 "sound_table" = id; 
+                "transcript_folder" = id; 
                 window = id; 
             }; 
             SUPERCLASS = NSObject; 
