@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>currentDocument</key>
-	<string>ruby/controller/appcontroller.rb</string>
+	<string>ruby/dialog/preferencedialog.rb</string>
 	<key>documents</key>
 	<array>
 		<dict>
@@ -21,44 +21,43 @@
 	<integer>296</integer>
 	<key>metaData</key>
 	<dict>
-		<key>ruby/controller/appcontroller.rb</key>
+		<key>ruby/controller/preferences.rb</key>
 		<dict>
 			<key>caret</key>
 			<dict>
 				<key>column</key>
-				<integer>26</integer>
+				<integer>21</integer>
 				<key>line</key>
-				<integer>298</integer>
+				<integer>74</integer>
 			</dict>
-			<key>columnSelection</key>
-			<false/>
 			<key>firstVisibleColumn</key>
 			<integer>0</integer>
 			<key>firstVisibleLine</key>
-			<integer>0</integer>
-			<key>selectFrom</key>
+			<integer>55</integer>
+		</dict>
+		<key>ruby/dialog/preferencedialog.rb</key>
+		<dict>
+			<key>caret</key>
 			<dict>
 				<key>column</key>
 				<integer>21</integer>
 				<key>line</key>
-				<integer>298</integer>
+				<integer>81</integer>
 			</dict>
-			<key>selectTo</key>
-			<dict>
-				<key>column</key>
-				<integer>26</integer>
-				<key>line</key>
-				<integer>298</integer>
-			</dict>
+			<key>firstVisibleColumn</key>
+			<integer>0</integer>
+			<key>firstVisibleLine</key>
+			<integer>69</integer>
 		</dict>
 	</dict>
 	<key>openDocuments</key>
 	<array>
-		<string>ruby/controller/appcontroller.rb</string>
+		<string>ruby/dialog/preferencedialog.rb</string>
+		<string>ruby/controller/preferences.rb</string>
 	</array>
 	<key>showFileHierarchyDrawer</key>
 	<true/>
 	<key>windowFrame</key>
-	<string>{{646, 76}, {870, 1094}}</string>
+	<string>{{599, 65}, {1016, 1103}}</string>
 </dict>
 </plist>
